--- a/po/sl.po
+++ b/po/sl.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-07-13 16:13+0200\n"
+"POT-Creation-Date: 2020-09-01 09:04+0200\n"
 "PO-Revision-Date: 2005-08-24 17:37+0200\n"
 "Last-Translator: Janez Krek <janez.krek@euroteh.si>\n"
 "Language-Team: Slovenščina <sl@li.org>\n"
@@ -466,7 +466,7 @@ msgid "Illegal snapshot."
 msgstr "Prilagoditev %s ni bila uspešna."
 
 #, fuzzy, c-format
-msgid "Invalid ambit %s."
+msgid "Invalid ambit '%s'."
 msgstr "Napačen vnos."
 
 #, fuzzy
@@ -492,7 +492,7 @@ msgid "Invalid subvolume."
 msgstr ""
 
 #, fuzzy, c-format
-msgid "Invalid table style %s."
+msgid "Invalid table style '%s'."
 msgstr "Napačen vnos."
 
 #, fuzzy
@@ -526,7 +526,7 @@ msgstr ""
 msgid "Missing argument for global option '%s'."
 msgstr ""
 
-msgid "Missing command argument."
+msgid "Missing command option."
 msgstr ""
 
 msgid "Missing delimiter '..' between snapshot numbers."
@@ -613,11 +613,16 @@ msgstr ""
 msgid "Unknown option '%s' for command '%s'."
 msgstr ""
 
-msgid "Unknown type of snapshot."
-msgstr ""
+#, fuzzy, c-format
+msgid "Unknown type '%s'."
+msgstr "Nezano stanje omrežne povezave "
 
 #, c-format
 msgid "Use %s, %s or %s."
+msgstr ""
+
+#, c-format
+msgid "Use %s, %s, %s or %s."
 msgstr ""
 
 #, c-format
@@ -664,9 +669,7 @@ msgid "nothing to do"
 msgstr ""
 
 #, fuzzy
-msgid ""
-"root argument can be used only together with no-dbus.\n"
-"Try 'snapper --help' for more information."
+msgid "root argument can be used only together with no-dbus.\n"
 msgstr "Pridobivanje podatkov o pomnilniku.."
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
@@ -690,10 +693,6 @@ msgstr ""
 
 #~ msgid "Type"
 #~ msgstr "Tip"
-
-#, fuzzy
-#~ msgid "Unknown type of snapshots."
-#~ msgstr "Nezano stanje omrežne povezave "
 
 #~ msgid "Value"
 #~ msgstr "Vrednost"
