--- a/po/af.po
+++ b/po/af.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: installation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-07-13 16:13+0200\n"
+"POT-Creation-Date: 2020-09-01 09:04+0200\n"
 "PO-Revision-Date: 2006-11-03 14:26\n"
 "Last-Translator: Novell Language <language@novell.com>\n"
 "Language-Team: Novell Language <language@novell.com>\n"
@@ -478,7 +478,7 @@ msgid "Illegal snapshot."
 msgstr "Ongeldige soort %1."
 
 #, fuzzy, c-format
-msgid "Invalid ambit %s."
+msgid "Invalid ambit '%s'."
 msgstr "Ongeldige soort %1."
 
 #, fuzzy
@@ -504,7 +504,7 @@ msgid "Invalid subvolume."
 msgstr ""
 
 #, fuzzy, c-format
-msgid "Invalid table style %s."
+msgid "Invalid table style '%s'."
 msgstr "Ongeldige soort %1."
 
 #, fuzzy
@@ -539,7 +539,7 @@ msgid "Missing argument for global option '%s'."
 msgstr "Ontbrekende argument vir"
 
 #, fuzzy
-msgid "Missing command argument."
+msgid "Missing command option."
 msgstr "Ontbrekende argument vir"
 
 msgid "Missing delimiter '..' between snapshot numbers."
@@ -628,12 +628,16 @@ msgstr "Onbekende globale opsie"
 msgid "Unknown option '%s' for command '%s'."
 msgstr "Onbekende uitvoeropdrag"
 
-#, fuzzy
-msgid "Unknown type of snapshot."
-msgstr "Onbekende soort."
+#, fuzzy, c-format
+msgid "Unknown type '%s'."
+msgstr "Onbekende opdrag"
 
 #, c-format
 msgid "Use %s, %s or %s."
+msgstr ""
+
+#, c-format
+msgid "Use %s, %s, %s or %s."
 msgstr ""
 
 #, c-format
@@ -681,13 +685,15 @@ msgid "nothing to do"
 msgstr "Niks om te doen nie."
 
 #, fuzzy
-msgid ""
-"root argument can be used only together with no-dbus.\n"
-"Try 'snapper --help' for more information."
+msgid "root argument can be used only together with no-dbus.\n"
 msgstr "Probeer `%s --help' of `%s --gebruik' vir meer inligting.\n"
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr ""
+
+#, fuzzy
+#~ msgid "Unknown type of snapshot."
+#~ msgstr "Onbekende soort."
 
 #, fuzzy
 #~ msgid "Command 'get-config' does not take arguments."
