--- a/po/ar.po
+++ b/po/ar.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-07-13 16:13+0200\n"
+"POT-Creation-Date: 2020-09-01 09:04+0200\n"
 "PO-Revision-Date: 2020-05-02 19:50+0000\n"
 "Last-Translator: mohammad alhargan <malham1@gmail.com>\n"
 "Language-Team: Arabic <https://l10n.opensuse.org/projects/snapper/master/ar/>\n"
@@ -451,7 +451,7 @@ msgid "Illegal snapshot."
 msgstr "لقطة غير مسموح بها."
 
 #, fuzzy, c-format
-msgid "Invalid ambit %s."
+msgid "Invalid ambit '%s'."
 msgstr "لقطة غير صالحة '%s'."
 
 msgid "Invalid configdata."
@@ -475,7 +475,7 @@ msgid "Invalid subvolume."
 msgstr "الحجم الفرعي غير صالح."
 
 #, fuzzy, c-format
-msgid "Invalid table style %s."
+msgid "Invalid table style '%s'."
 msgstr "نمط الجدول غير صالح %d."
 
 msgid "Invalid user."
@@ -507,7 +507,8 @@ msgstr "وسيط مفقودة لخيار الأمر '%s'."
 msgid "Missing argument for global option '%s'."
 msgstr "وسيط مفقودة لخيار العالمي '%s'."
 
-msgid "Missing command argument."
+#, fuzzy
+msgid "Missing command option."
 msgstr "أمر الوسائط مفقود."
 
 msgid "Missing delimiter '..' between snapshot numbers."
@@ -589,11 +590,16 @@ msgstr "الخيار العالمي غير معروف '%s'."
 msgid "Unknown option '%s' for command '%s'."
 msgstr "خيار غير معروف '%s' للأمر '%s'."
 
-msgid "Unknown type of snapshot."
-msgstr "نوع اللقطة غير معروف."
+#, fuzzy, c-format
+msgid "Unknown type '%s'."
+msgstr "أمر غير معروف '%s'."
 
 #, c-format
 msgid "Use %s, %s or %s."
+msgstr ""
+
+#, c-format
+msgid "Use %s, %s, %s or %s."
 msgstr ""
 
 #, c-format
@@ -640,13 +646,14 @@ msgid "nothing to do"
 msgstr "لا يوجد ما يمكن فعله"
 
 #, fuzzy
-msgid ""
-"root argument can be used only together with no-dbus.\n"
-"Try 'snapper --help' for more information."
+msgid "root argument can be used only together with no-dbus.\n"
 msgstr "يمكن استخدام الوسيطة الجذر فقط في حالة عدم وجود dbus."
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "استخدام: اللقطة [--global-options] <command> [--command-options] [أمر-وسائط]"
+
+#~ msgid "Unknown type of snapshot."
+#~ msgstr "نوع اللقطة غير معروف."
 
 #~ msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
 #~ msgstr "\t--all-configs، -a\t\tقائمة باللقطات من كل التكوينات التي يمكن الوصول إليها."
