--- a/po/be.po
+++ b/po/be.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: YaST (@memory@)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-07-13 16:13+0200\n"
+"POT-Creation-Date: 2020-09-01 09:04+0200\n"
 "PO-Revision-Date: 2006-01-04 08:58+0100\n"
 "Last-Translator: Alexander Nyakhaychyk <nyakhaychyk@gmail.com>\n"
 "Language-Team: Belarusian <i18n@suse.de>\n"
@@ -455,7 +455,7 @@ msgid "Illegal snapshot."
 msgstr "Падрыхтоўка дыскаў..."
 
 #, fuzzy, c-format
-msgid "Invalid ambit %s."
+msgid "Invalid ambit '%s'."
 msgstr "Падрыхтоўка дыскаў..."
 
 #, fuzzy
@@ -482,7 +482,7 @@ msgid "Invalid subvolume."
 msgstr ""
 
 #, fuzzy, c-format
-msgid "Invalid table style %s."
+msgid "Invalid table style '%s'."
 msgstr "Падрыхтоўка дыскаў..."
 
 #, fuzzy
@@ -516,7 +516,7 @@ msgstr ""
 msgid "Missing argument for global option '%s'."
 msgstr ""
 
-msgid "Missing command argument."
+msgid "Missing command option."
 msgstr ""
 
 msgid "Missing delimiter '..' between snapshot numbers."
@@ -600,11 +600,16 @@ msgstr ""
 msgid "Unknown option '%s' for command '%s'."
 msgstr "Невядомая опцыя для каманды '%1': %2"
 
-msgid "Unknown type of snapshot."
-msgstr ""
+#, fuzzy, c-format
+msgid "Unknown type '%s'."
+msgstr "Невядомая каманда: %1"
 
 #, c-format
 msgid "Use %s, %s or %s."
+msgstr ""
+
+#, c-format
+msgid "Use %s, %s, %s or %s."
 msgstr ""
 
 #, c-format
@@ -650,9 +655,7 @@ msgstr ""
 msgid "nothing to do"
 msgstr ""
 
-msgid ""
-"root argument can be used only together with no-dbus.\n"
-"Try 'snapper --help' for more information."
+msgid "root argument can be used only together with no-dbus.\n"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
