--- a/po/bg.po
+++ b/po/bg.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-07-13 16:13+0200\n"
+"POT-Creation-Date: 2020-09-01 09:04+0200\n"
 "PO-Revision-Date: 2017-10-29 20:52+0000\n"
 "Last-Translator: strahil nikolov <hunter86_bg@yahoo.com>\n"
 "Language-Team: Bulgarian <https://l10n.opensuse.org/projects/snapper/master/bg/>\n"
@@ -469,7 +469,7 @@ msgid "Illegal snapshot."
 msgstr "Настройването чрез %s бе неуспешно."
 
 #, fuzzy, c-format
-msgid "Invalid ambit %s."
+msgid "Invalid ambit '%s'."
 msgstr "Невалиден вход."
 
 #, fuzzy
@@ -495,7 +495,7 @@ msgid "Invalid subvolume."
 msgstr ""
 
 #, fuzzy, c-format
-msgid "Invalid table style %s."
+msgid "Invalid table style '%s'."
 msgstr "Невалиден вход."
 
 #, fuzzy
@@ -530,7 +530,7 @@ msgid "Missing argument for global option '%s'."
 msgstr ""
 
 #, fuzzy
-msgid "Missing command argument."
+msgid "Missing command option."
 msgstr "%s: Твърде много аргументи.\n"
 
 msgid "Missing delimiter '..' between snapshot numbers."
@@ -619,11 +619,16 @@ msgstr ""
 msgid "Unknown option '%s' for command '%s'."
 msgstr "Неизвестен параметър за %s, пренебрегване на „%s“\n"
 
-msgid "Unknown type of snapshot."
-msgstr ""
+#, fuzzy, c-format
+msgid "Unknown type '%s'."
+msgstr "Неизвестна държава: "
 
 #, c-format
 msgid "Use %s, %s or %s."
+msgstr ""
+
+#, c-format
+msgid "Use %s, %s, %s or %s."
 msgstr ""
 
 #, c-format
@@ -671,9 +676,7 @@ msgid "nothing to do"
 msgstr "без действие"
 
 #, fuzzy
-msgid ""
-"root argument can be used only together with no-dbus.\n"
-"Try 'snapper --help' for more information."
+msgid "root argument can be used only together with no-dbus.\n"
 msgstr "За повече информация опитайте  `%s --help' или`%s --usage'.\n"
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
