--- a/po/cs.po
+++ b/po/cs.po
@@ -3,11 +3,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-07-13 16:13+0200\n"
+"POT-Creation-Date: 2020-09-01 09:04+0200\n"
 "PO-Revision-Date: 2020-07-29 14:45+0000\n"
 "Last-Translator: Aleš Kastner <alkas@volny.cz>\n"
-"Language-Team: Czech <https://l10n.opensuse.org/projects/snapper/master/cs/>"
-"\n"
+"Language-Team: Czech <https://l10n.opensuse.org/projects/snapper/master/cs/>\n"
 "Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -466,8 +465,8 @@ msgstr "Stejné snímky."
 msgid "Illegal snapshot."
 msgstr "Nepřípustný snímek."
 
-#, c-format
-msgid "Invalid ambit %s."
+#, fuzzy, c-format
+msgid "Invalid ambit '%s'."
 msgstr "Neplatná oblast '%s'."
 
 msgid "Invalid configdata."
@@ -491,8 +490,8 @@ msgstr "Neplatný snímek."
 msgid "Invalid subvolume."
 msgstr "Neplatná podřízená jednotka."
 
-#, c-format
-msgid "Invalid table style %s."
+#, fuzzy, c-format
+msgid "Invalid table style '%s'."
 msgstr "Neplatný styl tabulky %s."
 
 # SLE12
@@ -525,7 +524,8 @@ msgstr "Chybí parametr pro příkaz volby '%s'."
 msgid "Missing argument for global option '%s'."
 msgstr "Chybí parametr pro globální volbu '%s'."
 
-msgid "Missing command argument."
+#, fuzzy
+msgid "Missing command option."
 msgstr "Chybí parametr příkazu."
 
 msgid "Missing delimiter '..' between snapshot numbers."
@@ -608,11 +608,16 @@ msgstr "Neznámá globální volba '%s'."
 msgid "Unknown option '%s' for command '%s'."
 msgstr "Neznámá volba '%s' pro příkaz '%s'."
 
-msgid "Unknown type of snapshot."
-msgstr "Neznámý typ snímku."
+#, fuzzy, c-format
+msgid "Unknown type '%s'."
+msgstr "Neznámý příkaz '%s'."
 
 #, c-format
 msgid "Use %s, %s or %s."
+msgstr "Použijte %s, %s or %s."
+
+#, fuzzy, c-format
+msgid "Use %s, %s, %s or %s."
 msgstr "Použijte %s, %s or %s."
 
 # SLE12
@@ -661,9 +666,8 @@ msgstr "upravuji %s"
 msgid "nothing to do"
 msgstr "nic k provedení"
 
-msgid ""
-"root argument can be used only together with no-dbus.\n"
-"Try 'snapper --help' for more information."
+#, fuzzy
+msgid "root argument can be used only together with no-dbus.\n"
 msgstr ""
 "Argument root lze použít pouze ve spojení s argumentem no-dbus.\n"
 "Další informace: 'snapper --help'."
@@ -672,6 +676,9 @@ msgid "usage: snapper [--global-options] <command> [--command-options] [command-
 msgstr ""
 "Použití:\n"
 "\tsnapper [--obecné-volby] <příkaz> [--volby-příkazu] [argumenty]"
+
+#~ msgid "Unknown type of snapshot."
+#~ msgstr "Neznámý typ snímku."
 
 #~ msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
 #~ msgstr "\t--all-configs, -a\t\tZobrazí seznam snímků ze všech dostupných konfigurací."
