--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-07-13 16:13+0200\n"
+"POT-Creation-Date: 2020-09-01 09:04+0200\n"
 "PO-Revision-Date: 2001-07-17 16:27+0200\n"
 "Last-Translator: James Ogley <ogley@suse.co.uk>\n"
 "Language-Team: English <i18n@suse.de>\n"
@@ -485,7 +485,7 @@ msgid "Illegal snapshot."
 msgstr "Invalid type %1."
 
 #, fuzzy, c-format
-msgid "Invalid ambit %s."
+msgid "Invalid ambit '%s'."
 msgstr "Invalid type %1."
 
 #, fuzzy
@@ -511,7 +511,7 @@ msgid "Invalid subvolume."
 msgstr ""
 
 #, fuzzy, c-format
-msgid "Invalid table style %s."
+msgid "Invalid table style '%s'."
 msgstr "Invalid type %1."
 
 #, fuzzy
@@ -546,7 +546,7 @@ msgid "Missing argument for global option '%s'."
 msgstr "Missing argument for "
 
 #, fuzzy
-msgid "Missing command argument."
+msgid "Missing command option."
 msgstr "Missing argument for "
 
 msgid "Missing delimiter '..' between snapshot numbers."
@@ -635,12 +635,16 @@ msgstr "Unknown global option "
 msgid "Unknown option '%s' for command '%s'."
 msgstr "Unknown option for %s, ignored: '%s'\n"
 
-#, fuzzy
-msgid "Unknown type of snapshot."
-msgstr "Unknown type."
+#, fuzzy, c-format
+msgid "Unknown type '%s'."
+msgstr "Unknown command '%s'"
 
 #, c-format
 msgid "Use %s, %s or %s."
+msgstr ""
+
+#, c-format
+msgid "Use %s, %s, %s or %s."
 msgstr ""
 
 #, c-format
@@ -688,13 +692,15 @@ msgid "nothing to do"
 msgstr "Nothing to do."
 
 #, fuzzy
-msgid ""
-"root argument can be used only together with no-dbus.\n"
-"Try 'snapper --help' for more information."
+msgid "root argument can be used only together with no-dbus.\n"
 msgstr "Try `%s --help' or `%s --usage' for more information.\n"
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr ""
+
+#, fuzzy
+#~ msgid "Unknown type of snapshot."
+#~ msgstr "Unknown type."
 
 #, fuzzy
 #~ msgid "  Get config:"
