--- a/po/ko.po
+++ b/po/ko.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: entries\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-07-13 16:13+0200\n"
+"POT-Creation-Date: 2020-09-01 09:04+0200\n"
 "PO-Revision-Date: 2019-03-01 20:28+0000\n"
 "Last-Translator: Hwajin Kim <hwajin.kim@e4net.net>\n"
 "Language-Team: Korean <https://l10n.opensuse.org/projects/snapper/master/ko/>\n"
@@ -544,7 +544,7 @@ msgstr "잘못된 스냅샷입니다."
 
 # SLE12
 #, fuzzy, c-format
-msgid "Invalid ambit %s."
+msgid "Invalid ambit '%s'."
 msgstr "'%s' 스냅샷이 잘못되었습니다."
 
 # SLE12
@@ -573,7 +573,7 @@ msgid "Invalid subvolume."
 msgstr "하위 볼륨이 잘못되었습니다."
 
 #, fuzzy, c-format
-msgid "Invalid table style %s."
+msgid "Invalid table style '%s'."
 msgstr "잘못된 테이블 모양 %d 입니다."
 
 # SLE12
@@ -611,7 +611,8 @@ msgid "Missing argument for global option '%s'."
 msgstr "전역 옵션 '%s'에 대한 인수가 누락되었습니다."
 
 # SLE12
-msgid "Missing command argument."
+#, fuzzy
+msgid "Missing command option."
 msgstr "명령 인수가 누락되었습니다."
 
 msgid "Missing delimiter '..' between snapshot numbers."
@@ -707,11 +708,16 @@ msgid "Unknown option '%s' for command '%s'."
 msgstr "알 수 없는 옵션 '%s' - '%s' 명령."
 
 # SLE12
-msgid "Unknown type of snapshot."
-msgstr "알 수 없는 스냅샷 유형입니다."
+#, fuzzy, c-format
+msgid "Unknown type '%s'."
+msgstr "알 수 없는 명령 '%s'."
 
 #, c-format
 msgid "Use %s, %s or %s."
+msgstr ""
+
+#, c-format
+msgid "Use %s, %s, %s or %s."
 msgstr ""
 
 # SLE12
@@ -769,14 +775,16 @@ msgid "nothing to do"
 msgstr "수행할 작업 없음"
 
 #, fuzzy
-msgid ""
-"root argument can be used only together with no-dbus.\n"
-"Try 'snapper --help' for more information."
+msgid "root argument can be used only together with no-dbus.\n"
 msgstr "루트 인수는 no-dbus와 함께 사용해야 합니다."
 
 # SLE12
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "사용법: snapper [--global-options] <command> [--command-options] [command-arguments]"
+
+# SLE12
+#~ msgid "Unknown type of snapshot."
+#~ msgstr "알 수 없는 스냅샷 유형입니다."
 
 #~ msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
 #~ msgstr "\t--all-configs, -a\t\t액세스 가능한 구성의 스냅샷을 모두 나열합니다."
