--- a/po/nb.po
+++ b/po/nb.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-07-13 16:13+0200\n"
+"POT-Creation-Date: 2020-09-01 09:04+0200\n"
 "PO-Revision-Date: 2013-10-04 18:20+0200\n"
 "Last-Translator: Olav Pettershagen <olpetter@bbnett.no>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
@@ -474,7 +474,7 @@ msgid "Illegal snapshot."
 msgstr "Ugyldig øyeblikksbilde."
 
 #, fuzzy, c-format
-msgid "Invalid ambit %s."
+msgid "Invalid ambit '%s'."
 msgstr "Ugyldig øyeblikksbilde '%s'."
 
 msgid "Invalid configdata."
@@ -499,7 +499,7 @@ msgid "Invalid subvolume."
 msgstr "Ugyldig undervolum."
 
 #, fuzzy, c-format
-msgid "Invalid table style %s."
+msgid "Invalid table style '%s'."
 msgstr "Ugyldig tabellstil %d."
 
 #, fuzzy
@@ -532,7 +532,8 @@ msgstr "Manglende argument for kommandovalget '%s'."
 msgid "Missing argument for global option '%s'."
 msgstr "Manglende argument for globalt valg '%s'."
 
-msgid "Missing command argument."
+#, fuzzy
+msgid "Missing command option."
 msgstr "Manglende kommandoargument."
 
 msgid "Missing delimiter '..' between snapshot numbers."
@@ -616,11 +617,16 @@ msgstr "Ukjent globalt valg '%s'."
 msgid "Unknown option '%s' for command '%s'."
 msgstr "Ukjent valg '%s' for kommandoen '%s'."
 
-msgid "Unknown type of snapshot."
-msgstr "Ukjent type for øyeblikksbilde."
+#, fuzzy, c-format
+msgid "Unknown type '%s'."
+msgstr "Ukjent kommando '%s'."
 
 #, c-format
 msgid "Use %s, %s or %s."
+msgstr ""
+
+#, c-format
+msgid "Use %s, %s, %s or %s."
 msgstr ""
 
 #, fuzzy, c-format
@@ -667,13 +673,14 @@ msgid "nothing to do"
 msgstr "Ingenting å gjøre"
 
 #, fuzzy
-msgid ""
-"root argument can be used only together with no-dbus.\n"
-"Try 'snapper --help' for more information."
+msgid "root argument can be used only together with no-dbus.\n"
 msgstr "Forsøk 'snapper --help' for mer informasjon."
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "bruk: snapper [--globale valg] <kommando> [--kommandovalg] [kommandoargumenter]"
+
+#~ msgid "Unknown type of snapshot."
+#~ msgstr "Ukjent type for øyeblikksbilde."
 
 #, fuzzy
 #~ msgid "\t--disable-used-space\t\tDisable showing used space."
