--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,11 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-18 11:59+0200\n"
+"POT-Creation-Date: 2020-09-01 09:04+0200\n"
 "PO-Revision-Date: 2020-07-14 12:36+0000\n"
 "Last-Translator: Leonardo Teodoro <leonardosilvateodoro@hotmail.com>\n"
-"Language-Team: Portuguese (Brazil) <https://l10n.opensuse.org/projects/"
-"snapper/master/pt_BR/>\n"
+"Language-Team: Portuguese (Brazil) <https://l10n.opensuse.org/projects/snapper/master/pt_BR/>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -69,9 +68,7 @@ msgid "\t--jsonout\t\t\tSet JSON output format."
 msgstr "\t--jsonout\t\t\tDefina o formato de saída JSON."
 
 msgid "\t--machine-readable <format>\tSet a machine-readable output format (csv, json)."
-msgstr ""
-"\t--machine-readable <formato>\tDefina um formato de saída legível para "
-"máquina (csv, json)."
+msgstr "\t--machine-readable <formato>\tDefina um formato de saída legível para máquina (csv, json)."
 
 msgid "\t--no-dbus\t\t\tOperate without DBus."
 msgstr "\t--no-dbus\t\t\tOperar sem DBus."
@@ -101,9 +98,7 @@ msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
 msgstr "\t--root, -r <caminho>\t\tOperar na raiz do destino (apenas funciona sem DBus)."
 
 msgid "\t--separator <separator>\t\tCharacter separator for CSV output format."
-msgstr ""
-"\t--separator <separador>\t\tSeparador de caracteres para o formato de saída "
-"CSV."
+msgstr "\t--separator <separador>\t\tSeparador de caracteres para o formato de saída CSV."
 
 msgid "\t--sync, -s\t\t\tSync after deletion."
 msgstr "\t--sync, -s\t\t\tSincronizar após exclusão."
@@ -451,8 +446,8 @@ msgstr "Instantâneos idênticos."
 msgid "Illegal snapshot."
 msgstr "Instantâneo ilegal."
 
-#, c-format
-msgid "Invalid ambit %s."
+#, fuzzy, c-format
+msgid "Invalid ambit '%s'."
 msgstr "O âmbito %s é inválido."
 
 msgid "Invalid configdata."
@@ -475,8 +470,8 @@ msgstr "Instantâneo inválido."
 msgid "Invalid subvolume."
 msgstr "Subvolume inválido."
 
-#, c-format
-msgid "Invalid table style %s."
+#, fuzzy, c-format
+msgid "Invalid table style '%s'."
 msgstr "Estilo de tabela inválido %s."
 
 msgid "Invalid user."
@@ -508,7 +503,8 @@ msgstr "Argumento ausente para opção do comando '%s'."
 msgid "Missing argument for global option '%s'."
 msgstr "Argumento ausente para para a opção global '%s'."
 
-msgid "Missing command argument."
+#, fuzzy
+msgid "Missing command option."
 msgstr "Argumento de comando faltante."
 
 msgid "Missing delimiter '..' between snapshot numbers."
@@ -590,11 +586,16 @@ msgstr "Opção global desconhecida '%s'."
 msgid "Unknown option '%s' for command '%s'."
 msgstr "Opção desconhecida '%s' para comando ' %s'."
 
-msgid "Unknown type of snapshot."
-msgstr "Tipo de instantâneo desconhecido."
+#, fuzzy, c-format
+msgid "Unknown type '%s'."
+msgstr "Comando desconhecido '%s'."
 
 #, c-format
 msgid "Use %s, %s or %s."
+msgstr "Use %s, %s ou %s."
+
+#, fuzzy, c-format
+msgid "Use %s, %s, %s or %s."
 msgstr "Use %s, %s ou %s."
 
 #, c-format
@@ -640,15 +641,17 @@ msgstr "alterando %s"
 msgid "nothing to do"
 msgstr "nada a fazer"
 
-msgid ""
-"root argument can be used only together with no-dbus.\n"
-"Try 'snapper --help' for more information."
+#, fuzzy
+msgid "root argument can be used only together with no-dbus.\n"
 msgstr ""
 "O argumento raiz pode ser usado apenas junto com o no-dbus.\n"
 "Tente 'snapper --help' para mais informações."
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "uso: snapper [--opções-globais] <comando> [--opções-do-comando] [argumentos]"
+
+#~ msgid "Unknown type of snapshot."
+#~ msgstr "Tipo de instantâneo desconhecido."
 
 #~ msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
 #~ msgstr "\t--all-configs, -a\t\tListar os instantâneo de todas as configurações acessíveis."
