--- a/po/tg.po
+++ b/po/tg.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Tajik openSUSE Localization\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-07-13 16:13+0200\n"
+"POT-Creation-Date: 2020-09-01 09:04+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Victor Ibragimov <victor.ibragimov@gmail.com>\n"
 "Language-Team: Tajik KDE & Software Localization - Victor Ibragimov <victor.ibragimov@gmail.com>\n"
@@ -442,7 +442,7 @@ msgid "Illegal snapshot."
 msgstr ""
 
 #, c-format
-msgid "Invalid ambit %s."
+msgid "Invalid ambit '%s'."
 msgstr ""
 
 msgid "Invalid configdata."
@@ -466,7 +466,7 @@ msgid "Invalid subvolume."
 msgstr ""
 
 #, c-format
-msgid "Invalid table style %s."
+msgid "Invalid table style '%s'."
 msgstr ""
 
 msgid "Invalid user."
@@ -498,7 +498,7 @@ msgstr ""
 msgid "Missing argument for global option '%s'."
 msgstr ""
 
-msgid "Missing command argument."
+msgid "Missing command option."
 msgstr ""
 
 msgid "Missing delimiter '..' between snapshot numbers."
@@ -580,11 +580,16 @@ msgstr ""
 msgid "Unknown option '%s' for command '%s'."
 msgstr ""
 
-msgid "Unknown type of snapshot."
+#, c-format
+msgid "Unknown type '%s'."
 msgstr ""
 
 #, c-format
 msgid "Use %s, %s or %s."
+msgstr ""
+
+#, c-format
+msgid "Use %s, %s, %s or %s."
 msgstr ""
 
 #, c-format
@@ -630,9 +635,7 @@ msgstr ""
 msgid "nothing to do"
 msgstr ""
 
-msgid ""
-"root argument can be used only together with no-dbus.\n"
-"Try 'snapper --help' for more information."
+msgid "root argument can be used only together with no-dbus.\n"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
