--- a/dists/debian/changelog
+++ b/dists/debian/changelog
@@ -4,7 +4,7 @@ snapper (0.8.13) stable; urgency=low
 
   * call fsync after writing snapshot info file (bsc#1078336)
 
- -- Arvin Schnell <aschnell@suse.com>  Thu, 27 Aug 27 2020 12:35:09 +0000
+ -- Arvin Schnell <aschnell@suse.com>  Thu, 27 Aug 2020 12:35:09 +0000
 
 snapper (0.8.12) stable; urgency=low
 
@@ -12,7 +12,7 @@ snapper (0.8.12) stable; urgency=low
 
   * fixed error when using mksubvolume to create /tmp (bsc#1174401)
 
- -- Arvin Schnell <aschnell@suse.com>  Thu, 23 Jul 23 2020 11:52:31 +0000
+ -- Arvin Schnell <aschnell@suse.com>  Thu, 23 Jul 2020 11:52:31 +0000
 
 snapper (0.8.11) stable; urgency=low
 
